--- a/index.html
+++ b/index.html
@@ -12,9 +12,8 @@
 
 <body>
     <div class="layout">
-      <button id="mood"class="btn btn-light"> L </button>
-        <h1 class=" text-center display-4 text-info ">Welcome at TODO APP</h1>
-        <button id="modalbtn" class="btn btn-primary btn-info btn-block w-50 mx-auto my-5" > Add Task Form Here </button>
+      <h1 class=" text-center display-4 text-warning "> <i  id="mood" class="fas fa-cloud-sun"></i> Welcome at TODO APP</h1>
+        <button id="modalbtn" class="btn btn-warning w-50 " > Add Task Form Here </button>
         <div class="container col-md-7">
             <div class="card ">
                 <div class="card-body">
