--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <div class="layout">
-      <h1 class=" text-center display-4 text-warning "> <i  id="mood" class="fas fa-cloud-sun"></i> Welcome at TODO APP</h1>
+      <h1 class=" text-center display-4 text-warning col-md-12"> <i  id="mood" class=" col-md-12 fas fa-cloud-sun"></i> Welcome at TODO APP</h1>
         <button id="modalbtn" class="btn btn-warning w-50 " > Add Task Form Here </button>
         <div class="container col-md-7">
             <div class="card ">
